# numerical_utils

./: README.md  setup.cfg
src/numerical_utils/: linalg.py  timers.py
