[metadata]
name = numerical_utils
version = attr: src.numerical_utils.__version__
author = L. F. Pereira
author_email = luisfgpereira95@gmail.com
description = Utils to help solving numerical problems
long_description = file: README.md
url = https://github.com/numerical_utils
project_urls =
	Bug Tracker = https://github.com/numerical_utils/issues
classifiers = 
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	License :: OSI Approved :: MIT License

[options]
package_dir = 
	= src
packages = find:
python_requires = >= 3.6
install_requires =
	matplotlib

[options.packages.find]
where = src


